--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Build
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/actions/setup-node@v2
         with:
           node-version: '16'
+
+      - name: Build Static Files
         env:
           OAUTH_APP_CLIENT_ID: ${{ secrets.OAUTH_APP_CLIENT_ID }}
           OAUTH_APP_CLIENT_SECRET: ${{ secrets.OAUTH_APP_CLIENT_SECRET }}
