--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: '16'
 
