--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuepress-theme-reco": "^1.6.6"
   },
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.8.2",
     "vuepress": "^1.8.2"
   }
 }
